# nfl-assets

./: README.md  nflfastr_data_pipeline.ipynb  pyproject.toml  team_color_codes.csv
