[project]
name = "nflfastr-pipeline"
version = "0.1.0"
description = "ETL pipeline for cleaning nflfastR data and loading into DuckDB"
authors = [
    { name = "Ray Carpenter", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"